--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -6,3 +6,7 @@
 ///////////////////////////////////////////
 
 @import 'components/start-page';
+@import 'components/layout';
+@import 'components/patientheader';
+@import 'components/scr-header';
+@import 'components/chargebanner';
