--- a/app/views/index.html
+++ b/app/views/index.html
@@ -23,9 +23,55 @@ SCRa prototype kit
 <!-- More info and code for the page layout can be found at https://service-manual.nhs.uk/design-system/styles/layout -->
 {% block content %}
 
-<div class="starter-template">
-  <h1>Bootstrap starter template</h1>
-  <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+<div class="green-banner">
+  <div class="container-fluid">
+    <img style="padding-left:30px; display:inline-block;" src="images/tick-icon.svg"><span style="color:white;padding-left:20px;">
+      Access to free NHS services.</p></span>
+  </div>
 </div>
+
+<div class="example-grid">
+  <div class="row">
+    <div class="col">
+      <p>
+        12 columns per page
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm">
+      <p>
+        Column 1 of 6
+      </p>
+    </div>
+    <div class="col-sm">
+      <p>
+        Column 2 of 6
+      </p>
+    </div>
+    <div class="col-sm">
+      <p>
+        Column 3 of 6
+      </p>
+    </div>
+    <div class="col-sm">
+      <p>
+        Column 4 of 6
+      </p>
+    </div>
+    <div class="col-sm">
+      <p>
+        Column 5 of 6
+      </p>
+    </div>
+    <div class="col-sm">
+      <p>
+        Column 6 of 6
+      </p>
+    </div>
+
+  </div>
+</div>
+
 
 {% endblock %}
