--- a/docs/views/template.html
+++ b/docs/views/template.html
@@ -92,7 +92,7 @@
   {% block beforeContent %}{% endblock %}
 
   {% block main %}
-  <main class="container" id="maincontent" role="main">
+  <main class="container-fluid" id="maincontent" role="main">
     {% block content %}{% endblock %}
   </main>
   {% endblock %}
