--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -10,3 +10,6 @@
 @import 'components/patientheader';
 @import 'components/scr-header';
 @import 'components/chargebanner';
+@import 'components/table';
+@import 'components/tabs';
+@import 'components/search-history';
