--- a/app/views/current-status.html
+++ b/app/views/current-status.html
@@ -106,17 +106,29 @@ Dashboard
                           <div class="row">
                             <div class="col">
                               <h4>Start date</h4>
-                              <input type="date" class="form-control" placeholder="" maxlength="2">
+                              <form name="myForm" action="demo_form.asp" onsubmit="return validateForm()" method="post" id="nonumber"> 
+                                      <input type="number" id="d" name="date" min="1" max="31" />
+                                      <input type="number" id="m" name="month" min="1" max="12" />
+                                      <input type="number" id="y"  name="year" min="1900" max="9999" />
+                                      
+
+                                </form>
                             </div>
 
 
                             <div class="col">
+                          
                               <h4>End date</h4>
-                                <input type="date" class="form-control" placeholder="">
+                                <form name="myForm" action="demo_form.asp" onsubmit="return validateForm()" method="post"> 
+                                      <input type="number" id="d" name="date" min="1" max="31" />
+                                      <input type="number" id="m" name="month" min="1" max="12" />
+                                      <input type="number" id="y"  name="year" min="1900" max="9999" />
+                                      
+
+                                </form>
                             </div>
 
                           </div>
-                      </form>
 
                       <div class="container-fluid">
                         <div class="row">
