--- a/app/views/ovm-v2/layout.html
+++ b/app/views/ovm-v2/layout.html
@@ -28,7 +28,7 @@
 <p style="padding-left:50px"><strong>Samantha brannigan</strong><span style="padding-left:50px">DOB: 11/09/1975</span><span style="padding-left:50px">Female<span style="padding-left:50px">NHS No: 123456789</span><span style="padding-left:50px">GP Practice</span><span style="padding-left:50px">Address : 1 Primrose Avenue, Pynes Hill, Rydon Lane, Exeter, Devon, United Kingdom, EX2 5SA</span></span></p>
 </div>
 
-<ul class="nav nav-tabs" id="myTab" role="tablist" style="background-color:#DAE7F4; margin-bottom:20px">
+<ul class="nav nav-tabs" id="myTab" role="tablist">
   <li class="nav-item">
     <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Patient details</a>
   </li>
