--- a/app/views/ovm-v2/current-status-red.html
+++ b/app/views/ovm-v2/current-status-red.html
@@ -8,9 +8,9 @@ Dashboard
 {% block content %}
 
 
-<div class="green-banner">
-  <img style="padding-left:30px; display:inline-block;" src="images/tick-icon.svg"><span style="color:white;padding-left:20px;">
-    Access to free NHS services.</p></span>
+<div class="red-banner">
+  <p style="display:inline;margin-left:30px" id="exclamation"><span>!</p>
+          <p style="display:inline;">Likely chargeable for NHS services.</span></p>
 </div>
 
 <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -106,29 +106,17 @@ Dashboard
                           <div class="row">
                             <div class="col">
                               <h4>Start date</h4>
-                              <form name="myForm" action="demo_form.asp" onsubmit="return validateForm()" method="post" id="nonumber"> 
-                                      <input type="number" id="d" name="date" min="1" max="31" />
-                                      <input type="number" id="m" name="month" min="1" max="12" />
-                                      <input type="number" id="y"  name="year" min="1900" max="9999" />
-                                      
-
-                                </form>
+                              <input type="date" class="form-control" placeholder="" maxlength="2">
                             </div>
 
 
                             <div class="col">
-                          
                               <h4>End date</h4>
-                                <form name="myForm" action="demo_form.asp" onsubmit="return validateForm()" method="post"> 
-                                      <input type="number" id="d" name="date" min="1" max="31" />
-                                      <input type="number" id="m" name="month" min="1" max="12" />
-                                      <input type="number" id="y"  name="year" min="1900" max="9999" />
-                                      
-
-                                </form>
+                                <input type="date" class="form-control" placeholder="">
                             </div>
 
                           </div>
+                      </form>
 
                       <div class="container-fluid">
                         <div class="row">
