--- a/docs/views/index.html
+++ b/docs/views/index.html
@@ -1,49 +1,33 @@
-{% extends 'layout.html' %}
+<!-- Use this page as the index for your project -->
 
-{% block beforeContent %}
-  {{ hero({
-    "heading": "NHS.UK prototype kit",
-    "text": "Rapidly create HTML prototypes of NHS.UK services."
-  }) }}
+<!-- ADDING CUSTOM CSS - Add your custom CSS or Sass in /app/assets/sass/main.scss -->
+
+<!-- Extends the layout from /views/layout.html -->
+{% extends 'layout.html' %}
+<!--
+  In /views/layout.html you can:
+    - change the header and footer
+    - add custom CSS and JavaScript
+-->
+
+<!-- Set the page title inside the pageTitle block -->
+{% block pageTitle %}
+SCRa prototype kit
 {% endblock %}
 
+<!-- Breadcrumb goes inside the beforeContent block -->
+{% block beforeContent %}
+{% endblock %}
+
+<!-- Your page content goes inside the content block -->
+<!-- More info and code for the page layout can be found at https://service-manual.nhs.uk/design-system/styles/layout -->
 {% block content %}
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-full">
 
-      <div class="nhsuk-grid-row nhsuk-promo-group">
-        <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
-          {{ promo({
-            "href": "/docs/install",
-            "heading": "Install",
-            "headingLevel": 2,
-            "description": "Download and installation guides."
-          }) }}
-        </div>
-        <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
-          {{ promo({
-            "href": "/docs/how-tos",
-            "heading": "How to guides",
-            "headingLevel": 2,
-            "description": "Learn to create pages, use components, add data and more."
-          }) }}
-        </div>
-        <div class="nhsuk-grid-column-one-third nhsuk-promo-group__item">
-          {{ promo({
-            "href": "page-templates",
-            "heading": "Page templates",
-            "headingLevel": 2,
-            "description": "Copy and paste page templates into your project."
-          }) }}
-        </div>
-      </div>
+<a href="ovm-v1/current-status">Prototype 1</a><br />
 
-      <hr>
+<a href="ovm-v2/current-status">Prototype 2</a>
 
-      <div class="nhsuk-u-reading-width">
-        <p class="nhsuk-u-margin-bottom-0">Visit the <a href="https://service-manual.nhs.uk">NHS digital service manual</a> for guidance and examples.</p>
-      </div>
 
-    </div>
-  </div>
+
+
 {% endblock %}
