icon image issues fixed

--- a/app/views/ovm-v1/current-status.html
+++ b/app/views/ovm-v1/current-status.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% extends 'layout.html' %}
 
+
 {% block pageTitle %}
 Dashboard
 {% endblock %}
@@ -8,8 +9,8 @@ Dashboard
 {% block beforeContent %}
 
 <div class="container-fluid">
-  <div class="green-banner" style="padding:0px;">
-    <img style="padding-left:30px; display:inline-block;" src="images/tick-icon.svg"><span style="color:white;padding-left:20px;">
+  <div class="green-banner" >
+    <img style="padding-left:30px; display:inline-block;" src="/images/tick-icon.svg"><span style="color:white;padding-left:20px;">
       Access to free NHS services.</p></span>
   </div>
 
@@ -89,7 +90,7 @@ Dashboard
               <tr style="height:80px;">
                 <td>
                   <div class="action-link">
-                    <img style="padding-left:20px;" src="images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
+                    <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
                           Get historical status
                         </a></span>
                   </div>
