--- a/app/views/ovm-v2/current-status.html
+++ b/app/views/ovm-v2/current-status.html
@@ -9,7 +9,7 @@ Dashboard
 
 
 <div class="green-banner">
-  <img style="padding-left:30px; display:inline-block;" src="images/tick-icon.svg"><span style="color:white;padding-left:20px;">
+  <img style="padding-left:30px; display:inline-block;" src="/images/tick-icon.svg"><span style="color:white;padding-left:20px;">
     Access to free NHS services.</p></span>
 </div>
 
@@ -86,7 +86,7 @@ Dashboard
             <tr style="height:80px;">
               <td>
                 <div class="action-link">
-                  <img style="padding-left:20px;" src="images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
+                  <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
                         Get historical status
                       </a></span>
                 </div>
