--- a/docs/views/layout.html
+++ b/docs/views/layout.html
@@ -21,7 +21,7 @@
 <!-- More info and code for the header can be found at https://service-manual.nhs.uk/design-system/components/header -->
 {% block header %}
 <div class="scr-header">
-<p>Find a patient<span style="padding-left:50px">Help</span><span style="padding-left:50px">Exit<span style="padding-left:1250px"><img src="images/NHS 10mm - RGB Blue.jpg" alt="NHS logo" width="117.2" height="47.2"></span></p>
+<p>Find a patient<span style="padding-left:50px">Help</span><span style="padding-left:50px">Exit<span style="padding-left:1250px"><img src="/images/NHS 10mm - RGB Blue.jpg" alt="NHS logo" width="117.2" height="47.2"></span></p>
 
   </div>
 <div class="patient-header">
