--- a/app/views/ovm-v1/current-status-red.html
+++ b/app/views/ovm-v1/current-status-red.html
@@ -92,6 +92,8 @@ Dashboard
                 </div>
             </tr>
             </td>
+          </div>
+        </div>
 
 
             <!-- THE TOGGLE PART -->
