--- a/app/views/ovm-v2/current-status-red.html
+++ b/app/views/ovm-v2/current-status-red.html
@@ -94,43 +94,88 @@ Dashboard
             </td>
 
 
-            <!-- THE TOGGLE PART -->
             <table>
               <tbody>
                 <tr>
-                  <td style="position:relative; bottom:50px">
-
+                  <td colspan="0" style="position:relative; bottom:50px">
                     <div class="search-history" id="hidethis" style="display:none;">
-                      <form style="padding-top:30px; padding-bottom:50px;">
+                      <form style="padding-top:30px; padding-bottom:50px;padding-left:20px">
                         <div class="container">
                           <div class="row">
-                            <div class="col">
+                            <div class="col-lg">
                               <h4>Start date</h4>
-                              <input type="date" class="form-control" placeholder="" maxlength="2">
+
+
+                              <form >
+                                <fieldset style="padding-right:100px">
+                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
+                                  <div class="row">
+                                    <div class="col">
+
+                                      <label for="date">Day</label>
+                                      <input type="number" id="d" name="date" min="1" max="31" />
+                                    </div>
+                                    <div class="col">
+
+                                      <label for="month">Month</label>
+                                      <input type="number" id="m" name="month" min="1" max="12" />
+                                    </div>
+                                    <div class="col">
+
+                                      <label for="year">Year</label>
+                                      <input type="number" id="y" name="year" min="1900" max="9999" />
+                                    </div>
+                                </fieldset>
+                              </form>
+
                             </div>
 
 
-                            <div class="col">
+                            <div class="col-lg">
+
                               <h4>End date</h4>
-                                <input type="date" class="form-control" placeholder="">
+                              <form>
+                                <fieldset>
+                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
+                                  <div class="row">
+                                    <div class="col">
+
+                                      <label for="date">Day</label>
+                                      <input type="number" id="d" name="date" min="1" max="31" />
+                                    </div>
+                                    <div class="col">
+
+                                      <label for="month">Month</label>
+                                      <input type="number" id="m" name="month" min="1" max="12" />
+                                    </div>
+                                    <div class="col">
+
+                                      <label for="year">Year</label>
+                                      <input type="number" id="y" name="year" min="1900" max="9999" />
+                                    </div>
+                                </fieldset>
+                              </form>
+
+                            </div>
                             </div>
 
-                          </div>
-                      </form>
 
-                      <div class="container-fluid">
-                        <div class="row">
-                          <div class="col" style="padding-top:20px;">
-                            <button type="submit" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='historic-status'">Search</button>
+
+
+                          <div class="container-fluid">
+                            <div class="row">
+                              <div class="col" style="padding-top:20px;">
+                                <button type="submit" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='historic-status'">Search</button>
+                              </div>
+                            </div>
                           </div>
                         </div>
-                      </div>
                     </div>
-                  </div>
-                </td>
-              </tr>
-          </tbody>
-        </table>
+      </div>
+    </div </td>
+    </tr>
+    </tbody>
+    </table>
 
       {% endblock %}
 
