--- a/app/views/ovm-v2/current-status.html
+++ b/app/views/ovm-v2/current-status.html
@@ -84,7 +84,7 @@ Dashboard
           </thead>
           <tbody>
             <tr style="height:80px;">
-              <td>
+              <td colspan="0">
                 <div class="action-link">
                   <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
                         Get historical status
@@ -94,74 +94,104 @@ Dashboard
             </td>
 
 
+
             <!-- THE TOGGLE PART -->
-            <table>
-              <tbody>
-                <tr>
-                  <td style="position:relative; bottom:50px">
 
+
+                  <td colspan="0">
                     <div class="search-history" id="hidethis" style="display:none;">
-                      <form style="padding-top:30px; padding-bottom:50px;">
-                        <div class="container">
+                      <form style="padding-top:30px; padding-bottom:50px;padding-left:20px">
+                        <div class="container" style="margin:0px;">
                           <div class="row">
-                            <div class="col">
+                            <div class="col-lg">
                               <h4>Start date</h4>
-                              <form name="myForm" action="demo_form.asp" onsubmit="return validateForm()" method="post" id="nonumber">
+
+
+                              <form>
+                                <fieldset style="padding-right:100px">
+                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
+                                  <div class="row">
+                                    <div class="col">
+                                      <label for="date">Day</label>
                                       <input type="number" id="d" name="date" min="1" max="31" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="month">Month</label>
                                       <input type="number" id="m" name="month" min="1" max="12" />
-                                      <input type="number" id="y"  name="year" min="1900" max="9999" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="year">Year</label>
+                                      <input type="number" id="y" name="year" min="1900" max="9999" />
+                                    </div>
+                                </fieldset>
+                              </form>
+                              <div class="container-fluid">
+                                <div class="row">
+                                  <div class="col" style="padding-top:20px;">
+                                    <button type="submit" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='historic-status'">Search</button>
+                                  </div>
+                                </div>
+                              </div>
 
-
-                                </form>
                             </div>
 
 
-                            <div class="col">
+                            <div class="col-lg">
 
                               <h4>End date</h4>
-                                <form name="myForm" action="demo_form.asp" onsubmit="return validateForm()" method="post">
+                              <form>
+                                <fieldset>
+                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
+                                  <div class="row">
+                                    <div class="col">
+                                      <label for="date">Day</label>
                                       <input type="number" id="d" name="date" min="1" max="31" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="month">Month</label>
                                       <input type="number" id="m" name="month" min="1" max="12" />
-                                      <input type="number" id="y"  name="year" min="1900" max="9999" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="year">Year</label>
+                                      <input type="number" id="y" name="year" min="1900" max="9999" />
+                                    </div>
+                                </fieldset>
+                              </form>
 
-
-                                </form>
                             </div>
 
-                          </div>
-
-                      <div class="container-fluid">
-                        <div class="row">
-                          <div class="col" style="padding-top:20px;">
-                            <button type="submit" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='historic-status'">Search</button>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-          </tbody>
-        </table>
-
-      {% endblock %}
-
-      {%block pageScripts%}
-
-      <html>
 
 
-      <head>
-        <script>
-          document.getElementById("gethistoric").onclick = function() {
-            if (document.getElementById("hidethis").style.display == 'none') {
-              document.getElementById("hidethis").style.display =
-                'block'; // set to table-row instead of an empty string
-            } else {
-              document.getElementById("hidethis").style.display = 'none';
-            }
-          }
-        </script>
-      </head>
 
-      {% endblock %}
+
+
+
+      </div>
+    </div>
+  </div>
+</div>
+</td>
+</tbody>
+</table>
+
+{% endblock %}
+
+{%block pageScripts%}
+
+<html>
+
+
+<head>
+  <script>
+    document.getElementById("gethistoric").onclick = function() {
+      if (document.getElementById("hidethis").style.display == 'none') {
+        document.getElementById("hidethis").style.display =
+          'block'; // set to table-row instead of an empty string
+      } else {
+        document.getElementById("hidethis").style.display = 'none';
+      }
+    }
+  </script>
+</head>
+
+{% endblock %}
