--- a/app/views/ovm-v2/current-status.html
+++ b/app/views/ovm-v2/current-status.html
@@ -125,10 +125,10 @@ Dashboard
                                     </div>
                                 </fieldset>
                               </form>
-                              <div class="container-fluid">
+                              <div class="container">
                                 <div class="row">
                                   <div class="col" style="padding-top:20px;">
-                                    <button type="submit" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='historic-status'">Search</button>
+                                    <button type="submit" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='/ovm-v2/historic-status'">Search</button>
                                   </div>
                                 </div>
                               </div>
