--- a/app/views/ovm-v2/current-status-red.html
+++ b/app/views/ovm-v2/current-status-red.html
@@ -162,13 +162,13 @@ Dashboard
 
 
 
-                          <div class="container-fluid">
-                            <div class="row">
-                              <div class="col" style="padding-top:20px;">
-                                <button type="submit" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='historic-status'">Search</button>
+                            <div class="container">
+                              <div class="row">
+                                <form class="col" style="padding-top:20px;">
+                                  <input type="button" value="Search" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='/ovm-v2/historic-status'"></input>
+                                </form>
                               </div>
                             </div>
-                          </div>
                         </div>
                     </div>
       </div>
