--- a/app/views/ovm-v2/historic-status.html
+++ b/app/views/ovm-v2/historic-status.html
@@ -107,6 +107,13 @@ Dashboard
               <td>Access to free NHS services</td>
             </tr>
 
+            <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
+              <td style="padding-left:20px">26-Dec-2016</td>
+              <td>No expiry</td>
+              <td colspan="5">No results for this date period</td>
+
+            </tr>
+
             <tr>
               <td>
 
@@ -119,6 +126,70 @@ Dashboard
                 </div>
               </td>
             </tr>
+
+            <td>
+                    <div class="search-history" id="hidethis" style="display:none;">
+                      <form style="padding-top:30px; padding-bottom:50px;padding-left:20px">
+                        <div class="container" style="margin:0px;">
+                          <div class="row">
+                            <div>
+                              <h4>Start date</h4>
+
+
+                              <form>
+                                <fieldset style="padding-right:100px">
+                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
+                                  <div class="row">
+                                    <div class="col">
+                                      <label for="date">Day</label>
+                                      <input type="number" id="d" name="date" min="1" max="31" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="month">Month</label>
+                                      <input type="number" id="m" name="month" min="1" max="12" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="year">Year</label>
+                                      <input type="number" id="y" name="year" min="1900" max="9999" />
+                                    </div>
+                                </fieldset>
+                              </form>
+                              <div class="container">
+                                <div class="row">
+                                  <form class="col" style="padding-top:20px;">
+                                    <input type="button" value="Search" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='/ovm-v2/historic-status'"></input>
+                                  </form>
+                                </div>
+                              </div>
+
+                            </div>
+
+
+                            <div>
+
+                              <h4>End date</h4>
+                              <form>
+                                <fieldset>
+                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
+                                  <div class="row">
+                                    <div class="col">
+                                      <label for="date">Day</label>
+                                      <input type="number" id="d" name="date" min="1" max="31" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="month">Month</label>
+                                      <input type="number" id="m" name="month" min="1" max="12" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="year">Year</label>
+                                      <input type="number" id="y" name="year" min="1900" max="9999" />
+                                    </div>
+                                </fieldset>
+                              </form>
+
+                            </div>
+
+
 
 
 
