--- a/app/views/ovm-v2/no-results.html
+++ b/app/views/ovm-v2/no-results.html
@@ -87,7 +87,10 @@ Dashboard
             <td style="padding-left:20px;padding-bottom:0px;"><h3 style="padding-bottom:0px;">Search results</h3></td>
           </tr>
             <tr>
-              <td style="padding-left:20px;padding-top:0px;">No results for the dates you searched</td>
+              <td style="padding-left:20px;padding-top:0px;"><strong>No results for the date period : 15/02/2017 to 14/02/2018.</strong></td>
+            </tr>
+            <tr>
+              <td style="padding-left:20px;padding-top:0px;">Please search for a different date range.</td>
             </tr>
             <tr>
               <td>
@@ -102,7 +105,7 @@ Dashboard
               <!-- THE TOGGLE PART -->
               <table>
                 <tbody>
-                  <tr>
+                  <tr colspan="0">
                     <td style="position:relative; bottom:50px">
 
                       <div class="search-history" id="hidethis" style="display:none;">
@@ -136,13 +139,13 @@ Dashboard
                             </div>
 
 
-                        <div class="container-fluid">
-                          <div class="row">
-                            <div class="col" style="padding-top:20px;">
-                              <button type="submit" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='historic-status'">Search</button>
+                            <div class="container">
+                              <div class="row">
+                                <form class="col" style="padding-top:20px;">
+                                  <input type="button" value="Search" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='/ovm-v2/historic-status'"></input>
+                                </form>
+                              </div>
                             </div>
-                          </div>
-                        </div>
                       </div>
                     </div>
                   </td>
