--- a/app/docs/views/index.html
+++ b/app/docs/views/index.html
@@ -23,9 +23,20 @@ SCRa prototype kit
 <!-- More info and code for the page layout can be found at https://service-manual.nhs.uk/design-system/styles/layout -->
 {% block content %}
 
-<a href="ovm-v1/current-status">Prototype 1</a><br />
+<p>
+  Prototype 2 is the newest version of the OVM SCR prototype.
+</p>
 
 <a href="ovm-v2/current-status">Prototype 2</a>
+
+<a href="ovm-v1/current-status">Prototype 1</a><br />
+
+<a href="ovm-v2/current-status-red">Red status banner</a>
+
+<a href="ovm-v2/no-results">No historic status results</a><br />
+
+<a href="ovm-v2/partial-results">Partial results</a><br />
+
 
 
 
