--- a/app/views/ovm-v2/historic-status.html
+++ b/app/views/ovm-v2/historic-status.html
@@ -121,7 +121,7 @@ Dashboard
 
                 <div class="action-link">
                   <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
-                        Get historical status
+                        Search new date range
                       </a></span>
                 </div>
               </td>
