--- a/docs/views/index.html
+++ b/docs/views/index.html
@@ -27,11 +27,11 @@ SCRa prototype kit
   Prototype 2 is the newest version of the OVM SCR prototype.
 </p>
 
-<a href="ovm-v2/current-status">Prototype 2</a>
+<a href="ovm-v2/current-status">Prototype 2</a><br />
 
 <a href="ovm-v1/current-status">Prototype 1</a><br />
 
-<a href="ovm-v2/current-status-red">Red status banner</a>
+<a href="ovm-v2/current-status-red">Red status banner</a><br />
 
 <a href="ovm-v2/no-results">No historic status results</a><br />
 
