--- a/app/views/ovm-v2/historic-status.html
+++ b/app/views/ovm-v2/historic-status.html
@@ -98,7 +98,7 @@ Dashboard
 
           <tbody>
             <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-              <td style="padding-left:20px">26-Dec-2016</td>
+              <td style="padding-left:20px;">26-Dec-2016</td>
               <td>No expiry</td>
               <td>1234567890</td>
               <td>Not provided</td>
@@ -113,21 +113,19 @@ Dashboard
               <td colspan="5">No results for this date period</td>
 
             </tr>
+          </tbody>
+        </table>
 
-            <tr>
-              <td>
-
-
+        <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
+          
+            <tr style="background-color:#F5F5F5" height="30px">
+              <th colspan="0" >
 
                 <div class="action-link">
                   <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
                         Search new date range
                       </a></span>
                 </div>
-              </td>
-            </tr>
-
-            <td>
                     <div class="search-history" id="hidethis" style="display:none;">
                       <form style="padding-top:30px; padding-bottom:50px;padding-left:20px">
                         <div class="container" style="margin:0px;">
