--- a/app/views/ovm-v2/partial-results.html
+++ b/app/views/ovm-v2/partial-results.html
@@ -28,9 +28,9 @@ Dashboard
 
 
     <table class="ovm-table" style="box-shadow:0 4px 0 0 #d8dde0;">
-      <thead style="background-color:#005eb8;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
+      <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
         <tr>
-          <th scope="col" style="color:white; padding-left:20px;">Current status</th>
+          <th scope="col" style="color:#495057; padding-left:20px;">Current status</th>
           <th scope="col"></th>
           <th scope="col"></th>
           <th scope="col"></th>
@@ -71,9 +71,9 @@ Dashboard
 
 
         <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
-          <thead style="background-color:#005eb8;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
+          <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
             <tr>
-              <th scope="col" style="color:white; padding-left:20px;">Historical status</th>
+              <th scope="col" style="color:#495057; padding-left:20px;">Historical status</th>
               <th scope="col"></th>
               <th scope="col"></th>
               <th scope="col"></th>
