--- a/app/views/ovm-v2/no-results.html
+++ b/app/views/ovm-v2/no-results.html
@@ -87,71 +87,82 @@ Dashboard
             <td style="padding-left:20px;padding-bottom:0px;"><h3 style="padding-bottom:0px;">Search results</h3></td>
           </tr>
             <tr>
-              <td style="padding-left:20px;padding-top:0px;"><strong>No results for the date period : 15/02/2017 to 14/02/2018.</strong></td>
+              <td style="padding-left:20px;padding-top:0px;"><strong>No results for the date period : 15-Feb-2017 to 14-Feb-2018.</strong></td>
             </tr>
             <tr>
               <td style="padding-left:20px;padding-top:0px;">Please search for a different date range.</td>
             </tr>
-            <tr>
-              <td>
+            <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
+          
+            <tr style="background-color:#F5F5F5" height="30px">
+              <th colspan="0" >
+
                 <div class="action-link">
                   <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
-                        Search again
+                        Search new date range
                       </a></span>
                 </div>
-
-              </td>
-
-              <!-- THE TOGGLE PART -->
-              <table>
-                <tbody>
-                  <tr colspan="0">
-                    <td style="position:relative; bottom:50px">
-
-                      <div class="search-history" id="hidethis" style="display:none;">
-                        <form style="padding-top:30px; padding-bottom:50px;padding-left:20px" >
-                          <div class="container">
-                            <div class="row">
-                              <div class="col-lg">
-                                <h4>Start date</h4>
-                                <form name="myForm" action="demo_form.asp" onsubmit="return validateForm()" method="post" id="nonumber">
-                                        <input type="number" id="d" name="date" min="1" max="31" />
-                                        <input type="number" id="m" name="month" min="1" max="12" />
-                                        <input type="number" id="y"  name="year" min="1900" max="9999" />
+                    <div class="search-history" id="hidethis" style="display:none;">
+                      <form style="padding-top:30px; padding-bottom:50px;padding-left:20px">
+                        <div class="container" style="margin:0px;">
+                          <div class="row">
+                            <div>
+                              <h4>Start date</h4>
 
 
+                              <form>
+                                <fieldset style="padding-right:100px">
+                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
+                                  <div class="row">
+                                    <div class="col">
+                                      <label for="date">Day</label>
+                                      <input type="number" id="d" name="date" min="1" max="31" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="month">Month</label>
+                                      <input type="number" id="m" name="month" min="1" max="12" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="year">Year</label>
+                                      <input type="number" id="y" name="year" min="1900" max="9999" />
+                                    </div>
+                                </fieldset>
+                              </form>
+                              <div class="container">
+                                <div class="row">
+                                  <form class="col" style="padding-top:20px;">
+                                    <input type="button" value="Search" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='/ovm-v2/historic-status'"></input>
                                   </form>
-                              </div>
-
-
-                              <div class="col-lg">
-
-                                <h4>End date</h4>
-                                  <form name="myForm" action="demo_form.asp" onsubmit="return validateForm()" method="post">
-                                        <input type="number" id="d" name="date" min="1" max="31" />
-                                        <input type="number" id="m" name="month" min="1" max="12" />
-                                        <input type="number" id="y"  name="year" min="1900" max="9999" />
-
-
-                                  </form>
+                                </div>
                               </div>
 
                             </div>
 
 
-                            <div class="container">
-                              <div class="row">
-                                <form class="col" style="padding-top:20px;">
-                                  <input type="button" value="Search" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='/ovm-v2/historic-status'"></input>
-                                </form>
-                              </div>
+                            <div>
+
+                              <h4>End date</h4>
+                              <form>
+                                <fieldset>
+                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
+                                  <div class="row">
+                                    <div class="col">
+                                      <label for="date">Day</label>
+                                      <input type="number" id="d" name="date" min="1" max="31" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="month">Month</label>
+                                      <input type="number" id="m" name="month" min="1" max="12" />
+                                    </div>
+                                    <div class="col">
+                                      <label for="year">Year</label>
+                                      <input type="number" id="y" name="year" min="1900" max="9999" />
+                                    </div>
+                                </fieldset>
+                              </form>
+
                             </div>
-                      </div>
-                    </div>
-                  </td>
-                </tr>
-            </tbody>
-          </table>
+
 
 
             </tr>
