--- a/app/assets/sass/components/_search-history.scss
+++ b/app/assets/sass/components/_search-history.scss
@@ -3,6 +3,23 @@
   background-color: #F5F5F5;
   padding-right:0px;
 
-  margin:20px;
+  margin-left:20px;
+
+}
+
+.error {
+  border-color: red;
+
+}
+
+.error-message {
+
+}
+
+.error-summary {
+
+}
+
+.error-summary-title {
 
 }
