--- a/app/assets/sass/components/_table.scss
+++ b/app/assets/sass/components/_table.scss
@@ -4,9 +4,65 @@
   width:100%;
   background-color:#F5F5F5;
   tr{
-    height:50px;
+    // height:50px;
     border-color: #C5C5C5;
+  th{
+    padding-top:20px;
+    padding-bottom:20px;
+  }
+  td{
+    padding-top:20px;
+    padding-bottom:20px;
+  }
   }
 
 
+@media
+only screen and (max-width:760px),
+(min-device-width: 768px) and (max-device-width: 1024px)  {
+
+  table, thead, tbody, th, td, tr {
+		display: block;
+	}
+  /* Hide table headers (but not display: none;, for accessibility) */
+thead tr {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+tr { border: 1px solid #ccc; }
+
+td {
+  /* Behave  like a "row" */
+  border: none;
+  border-bottom: 1px solid #eee;
+  position: relative;
+  padding-left: 50%;
+}
+
+td:before {
+  /* Now like a table header */
+  position: absolute;
+  /* Top/left values mimic padding */
+  top: 6px;
+  left: 6px;
+  width: 45%;
+  padding-right: 10px;
+  white-space: nowrap;
+}
+
+/*
+  Label the data
+  You could also use a data-* attribute and content for this. That way "bloats" the HTML, this way means you need to keep HTML and CSS in sync. Lea Verou has a clever way to handle with text-shadow.
+  */
+  td:nth-of-type(1):before { content: "Immigration status from"; }
+  td:nth-of-type(2):before { content: "Immigration status to"; }
+  td:nth-of-type(3):before { content: "HO reference"; }
+  td:nth-of-type(4):before { content: "BRP number"; }
+  td:nth-of-type(5):before { content: "Visa product"; }
+  td:nth-of-type(6):before { content: "Immigration status"; }
+  td:nth-of-type(7):before { content: "Healthcare status"; }
+
+}
 }
