--- a/app/views/ovm-v2/current-status-red.html
+++ b/app/views/ovm-v2/current-status-red.html
@@ -46,7 +46,7 @@ Dashboard
         <th scope="col">Immigration status to</th>
         <th scope="col">HO reference</th>
         <th scope="col">BRP number</th>
-        <th scope="col">Visa product</th>
+        <th scope="col">Visa type</th>
         <th scope="col">Immigration status</th>
         <th scope="col">Healthcare status</th>
 
