--- a/app/views/ovm-v2/no-results.html
+++ b/app/views/ovm-v2/no-results.html
@@ -46,7 +46,7 @@ Dashboard
         <th scope="col">Immigration status to</th>
         <th scope="col">HO reference</th>
         <th scope="col">BRP number</th>
-        <th scope="col">Visa product</th>
+        <th scope="col">Visa type</th>
         <th scope="col">Immigration status</th>
         <th scope="col">Healthcare status</th>
 
@@ -93,7 +93,7 @@ Dashboard
               <td style="padding-left:20px;padding-top:0px;">Please search for a different date range.</td>
             </tr>
             <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
-          
+
             <tr style="background-color:#F5F5F5" height="30px">
               <th colspan="0" >
 
