--- a/app/views/ovm-v2/current-status.html
+++ b/app/views/ovm-v2/current-status.html
@@ -9,7 +9,7 @@ Dashboard
 
 
 <div class="green-banner">
-  <img style="padding-left:30px; display:inline-block;" src="/images/tick-icon.svg"><span style="color:white;padding-left:20px;">
+  <img style="padding-left:30px; display:inline-block;" src="/images/tick-icon.svg" alt="green tick"><span style="color:white;padding-left:20px;">
     Access to free NHS services.</p></span>
 </div>
 
@@ -24,141 +24,159 @@ Dashboard
 
 
 <div class="container-fluid">
+  <div class="col-12">
+
   <div class="row">
-
-
-    <table class="ovm-table" style="box-shadow:0 4px 0 0 #d8dde0;">
-      <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-        <tr>
-          <th scope="col" style="color:black; padding-left:20px;">Current status</th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-          <th scope="col"></th>
-          <th scope="col"></th>
+    <table role="table" class="ovm-table" style="box-shadow:0 4px 0 0 #d8dde0;">
+      <thead role="rowgroup"style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
+        <tr role="row">
+          <th role="columnheader"scope="col" style="color:black; padding-left:20px;" colspan="7">Current status</th>
 
         </tr>
       </thead>
 
-      <tr>
+      <thead role="rowgroup">
+        <tr role="row">
         <th scope="col" style="padding-left:20px">Immigration status from</th>
         <th scope="col">Immigration status to</th>
         <th scope="col">HO reference</th>
         <th scope="col">BRP number</th>
-        <th scope="col">Visa product</th>
+        <th scope="col">Visa type</th>
         <th scope="col">Immigration status</th>
-        <th scope="col">Healthcare status</th>
 
       </tr>
 
-      <tbody>
-        <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-          <td style="padding-left:20px">26-Dec-2016</td>
-          <td>No expiry</td>
-          <td>1234567890</td>
-          <td>Not provided</td>
-          <td>EU settlement scheme</td>
-          <td>Indefinite leave to remain</td>
-          <td>Access to free NHS services</td>
+    </thead>
+
+      <tbody role="rowgroup">
+        <tr role="row"style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
+          <td role="cell" style="padding-left:20px" >26-Dec-2016</td>
+          <td role="cell">No expiry</td>
+          <td role="cell">1234567890</td>
+          <td role="cell">Not provided</td>
+          <td role="cell">EU settlement scheme</td>
+          <td role="cell">Indefinite leave to remain</td>
+
         </tr>
 
       </tbody>
     </table>
 
-    <div class="container-fluid">
-      <div class="row">
+  </div>
+</div>
+</div>
+
+<div class="container-fluid">
+  <div class="col-12">
+  <div class="row">
 
 
-        <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
-          <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-            <tr>
-              <th scope="col" style="color:black; padding-left:20px;">Historical status</th>
-              <th scope="col"></th>
-              <th scope="col"></th>
-              <th scope="col"></th>
-              <th scope="col"></th>
-              <th scope="col"></th>
-              <th scope="col"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td colspan="0">
-                <div class="action-link" style="padding-top:30px;">
-                  <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
-                        Get historical status
-                      </a></span>
+    <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
+      <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
+        <tr>
+          <th scope="col" style="color:black; padding-left:20px;" colspan="7">Historical status</th>
+
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td colspan="0">
+            <div class="action-link" style="padding-top:30px;">
+              <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
+                    Get historical status
+                  </a></span>
+            </div>
+        </tr>
+        </td>
+
+
+
+        <!-- THE TOGGLE PART -->
+
+
+        <td>
+          <div class="search-history" id="hidethis" style="display:none;">
+            <form style="padding-top:30px; padding-bottom:50px;padding-left:20px">
+              <div class="error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" style="display:none;" id="error-summary">
+                <h2 class="error-summary__title" id="error-summary-title">
+                  There is a problem
+                </h2>
+                <div class="nhsuk-error-summary__body">
+                  <ul class="nhsuk-list nhsuk-error-summary__list">
+                    <li>
+                      <a href="#dob-start-error">All date fields must be filled in </a>
+                    </li>
+                  </ul>
                 </div>
-            </tr>
-            </td>
+              </div>
+              <div class="container" style="margin:0px;">
+                <div class="row">
+                  <div class="col-6">
+                    <div id="start-dob">
+                      <h4>Start date</h4>
 
 
-
-            <!-- THE TOGGLE PART -->
-
-
-            <td>
-                    <div class="search-history" id="hidethis" style="display:none;">
-                      <form style="padding-top:30px; padding-bottom:50px;padding-left:20px">
-                        <div class="container" style="margin:0px;">
+                      <form>
+                        <fieldset style="padding-right:100px">
+                          <small id="emailHelp" class="form-text text-muted">For example, 30 03 2016</small>
+                          <span class="error-message" id="dob-start-error" style="display:none;">
+                            <span>Error:</span> Start date must be complete
+                          </span>
                           <div class="row">
-                            <div>
-                              <h4>Start date</h4>
-
-
-                              <form>
-                                <fieldset style="padding-right:100px">
-                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
-                                  <div class="row">
-                                    <div class="col">
-                                      <label for="date">Day</label>
-                                      <input type="number" id="d" name="date" min="1" max="31" />
-                                    </div>
-                                    <div class="col">
-                                      <label for="month">Month</label>
-                                      <input type="number" id="m" name="month" min="1" max="12" />
-                                    </div>
-                                    <div class="col">
-                                      <label for="year">Year</label>
-                                      <input type="number" id="y" name="year" min="1900" max="9999" />
-                                    </div>
-                                </fieldset>
-                              </form>
-                              <div class="container">
-                                <div class="row">
-                                  <form class="col" style="padding-top:20px;">
-                                    <input type="button" value="Search" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='/ovm-v2/historic-status'"></input>
-                                  </form>
-                                </div>
-                              </div>
-
+                            <div class="col">
+                              <label for="startday">Day</label>
+                              <input type="number" id="startday" name="date" min="1" max="31" />
                             </div>
-
-
-                            <div>
-
-                              <h4>End date</h4>
-                              <form>
-                                <fieldset>
-                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
-                                  <div class="row">
-                                    <div class="col">
-                                      <label for="date">Day</label>
-                                      <input type="number" id="d" name="date" min="1" max="31" />
-                                    </div>
-                                    <div class="col">
-                                      <label for="month">Month</label>
-                                      <input type="number" id="m" name="month" min="1" max="12" />
-                                    </div>
-                                    <div class="col">
-                                      <label for="year">Year</label>
-                                      <input type="number" id="y" name="year" min="1900" max="9999" />
-                                    </div>
-                                </fieldset>
-                              </form>
-
+                            <div class="col">
+                              <label for="startmonth">Month</label>
+                              <input type="number" id="startmonth" name="month" min="1" max="12" />
                             </div>
+                            <div class="col">
+                              <label for="startyear">Year</label>
+                              <input type="number" id="startyear" name="year" min="1900" max="9999" />
+                            </div>
+                        </fieldset>
+                      </form>
+
+
+
+
+                      <form style="padding-top:20px;" action="/ovm-v2/historic-status">
+                        <input type="submit" id="button" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);"
+                          href="/ovm-v2/historic-status" value="submit"></input>
+                      </form>
+
+                    </div>
+
+                  </div>
+
+                  <div class="col-6">
+                    <div id="end-dob">
+
+                      <h4>End date</h4>
+                      <form>
+                        <fieldset>
+                          <small id="emailHelp" class="form-text text-muted">For example, 30 03 2017</small>
+                          <span class="error-message" id="dob-end-error" style="display:none;">
+                            <span>Error:</span> End date must be complete
+                          </span>
+                          <div class="row">
+                            <div class="col">
+                              <label for="enddate">Day</label>
+                              <input type="number" id="endday" name="date" min="1" max="31" />
+                            </div>
+                            <div class="col">
+                              <label for="endmonth">Month</label>
+                              <input type="number" id="endmonth" name="month" min="1" max="12" />
+                            </div>
+                            <div class="col">
+                              <label for="endyear">Year</label>
+                              <input type="number" id="endyear" name="year" min="1900" max="9999" />
+                            </div>
+                        </fieldset>
+                      </form>
+
+                    </div>
 
 
 
@@ -167,11 +185,15 @@ Dashboard
 
                   </div>
                 </div>
-      </div>
-    </div>
-    </td>
-    </tbody>
+              </div>
+          </div>
+        </td>
+      </tbody>
     </table>
+  </div>
+</div>
+</div>
+</div>
 
     {% endblock %}
 
@@ -190,6 +212,59 @@ Dashboard
             document.getElementById("hidethis").style.display = 'none';
           }
         }
+      </script>
+    </head>
+
+    <head>
+      <script>
+        $("#button").click(function(e) {
+
+          if (!$('#startday').val() || !$('#startmonth').val() || !$('#startyear').val()) {
+            $('#start-dob').addClass('error');
+            $('#dob-start-error').show();
+            $('#error-summary').show();
+
+            e.preventDefault();
+            if (!$('#startday').val()) {
+              $('#startday').addClass('error');
+            }
+            if (!$('#startmonth').val()) {
+              $('#startmonth').addClass('error');
+            }
+            if (!$('#startyear').val()) {
+              $('#startyear').addClass('error');
+            }
+
+          } else {
+            return true;
+            $('#start-dob').html("<h3>Sorry. We couldn't find any patients with " + formattedResultsList + "</h3>");
+
+          }
+
+
+          if (!$('#endday').val() || !$('#endmonth').val() || !$('#endyear').val()) {
+            $('#end-dob').addClass('error');
+            $('#dob-end-error').show();
+            $('#error-summary').show();
+            e.preventDefault();
+            if (!$('#endday').val()) {
+              $('#endday').addClass('error');
+            }
+            if (!$('#endmonth').val()) {
+              $('#endmonth').addClass('error');
+            }
+            if (!$('#endyear').val()) {
+              $('#endyear').addClass('error');
+            }
+
+          } else {
+            return true;
+
+          }
+
+
+
+        });
       </script>
     </head>
 
