--- a/app/views/ovm-v2/historic-status.html
+++ b/app/views/ovm-v2/historic-status.html
@@ -46,7 +46,7 @@ Dashboard
         <th scope="col">Immigration status to</th>
         <th scope="col">HO reference</th>
         <th scope="col">BRP number</th>
-        <th scope="col">Visa product</th>
+        <th scope="col">Visa type</th>
         <th scope="col">Immigration status</th>
         <th scope="col">Healthcare status</th>
 
@@ -82,23 +82,34 @@ Dashboard
               <th scope="col"></th>
             </tr>
           </thead>
+        </table>
+
+        <div class="row">
+
+          <h2 style="padding-left:50px;padding-top:20px;">Search results</h2>
+        </div>
+        <div class="container-fluid">
+        <div class="row">
+          <p style="padding-left:35px;padding-top:20px;">Showing search results for 30-Mar-2016 to 30-Mar-2017:</p>
+        </div>
+      </div>
+
+        <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
           <tbody>
-            <tr style="height:80px;">
-              <td style="padding-left:20px;"><strong>Showing search results for the date range:</strong></td>
-            </tr>
-            <tr>
+
+            <tr style="background-color:white">
               <th scope="col" style="padding-left:20px">Immigration status from</th>
               <th scope="col">Immigration status to</th>
               <th scope="col">HO reference</th>
               <th scope="col">BRP number</th>
-              <th scope="col">Visa product</th>
+              <th scope="col">Visa type</th>
               <th scope="col">Immigration status</th>
               <th scope="col">Healthcare status</th>
             </tr>
 
           <tbody>
             <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-              <td style="padding-left:20px;">26-Dec-2016</td>
+              <td style="padding-left:20px;">30-Mar-2016</td>
               <td>No expiry</td>
               <td>1234567890</td>
               <td>Not provided</td>
@@ -107,87 +118,87 @@ Dashboard
               <td>Access to free NHS services</td>
             </tr>
 
-            <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-              <td style="padding-left:20px">26-Dec-2016</td>
-              <td>No expiry</td>
-              <td colspan="5">No results for this date period</td>
 
-            </tr>
           </tbody>
         </table>
 
-        <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
-          
-            <tr style="background-color:#F5F5F5" height="30px">
-              <th colspan="0" >
+        <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;margin-top:0px;">
 
-                <div class="action-link">
-                  <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
-                        Search new date range
-                      </a></span>
-                </div>
-                    <div class="search-history" id="hidethis" style="display:none;">
-                      <form style="padding-top:30px; padding-bottom:50px;padding-left:20px">
-                        <div class="container" style="margin:0px;">
-                          <div class="row">
-                            <div>
-                              <h4>Start date</h4>
+          <tr style="background-color:#F5F5F5" height="30px">
+            <th colspan="0">
+
+              <div class="action-link">
+                <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
+                      Search new date range
+                    </a></span>
+              </div>
+              <div class="search-history" id="hidethis" style="display:none;">
+                <form style="padding-top:30px; padding-bottom:50px;padding-left:20px">
+                  <div class="container" style="margin:0px;">
+                    <div class="row">
+                      <div>
+                        <h4>Start date</h4>
 
 
-                              <form>
-                                <fieldset style="padding-right:100px">
-                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
-                                  <div class="row">
-                                    <div class="col">
-                                      <label for="date">Day</label>
-                                      <input type="number" id="d" name="date" min="1" max="31" />
-                                    </div>
-                                    <div class="col">
-                                      <label for="month">Month</label>
-                                      <input type="number" id="m" name="month" min="1" max="12" />
-                                    </div>
-                                    <div class="col">
-                                      <label for="year">Year</label>
-                                      <input type="number" id="y" name="year" min="1900" max="9999" />
-                                    </div>
-                                </fieldset>
-                              </form>
-                              <div class="container">
-                                <div class="row">
-                                  <form class="col" style="padding-top:20px;">
-                                    <input type="button" value="Search" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" onClick="window.location.href='/ovm-v2/historic-status'"></input>
-                                  </form>
-                                </div>
+                        <form>
+                          <fieldset style="padding-right:100px">
+                            <small id="emailHelp" class="form-text text-muted">For example, 30 03 2016</small>
+                            <div class="row">
+                              <div class="col">
+                                <label for="date">Day</label>
+                                <input type="number" id="d" name="date" min="1" max="31" />
                               </div>
+                              <div class="col">
+                                <label for="month">Month</label>
+                                <input type="number" id="m" name="month" min="1" max="12" />
+                              </div>
+                              <div class="col">
+                                <label for="year">Year</label>
+                                <input type="number" id="y" name="year" min="1900" max="9999" />
+                              </div>
+                          </fieldset>
+                        </form>
+                        <div class="container">
+                          <div class="row">
+                            <form class="col" style="padding-top:20px;">
+                              <input type="button" value="Search" style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);"
+                                onClick="window.location.href='/ovm-v2/historic-status'"></input>
+                            </form>
+                          </div>
+                        </div>
 
-                            </div>
-
-
-                            <div>
-
-                              <h4>End date</h4>
-                              <form>
-                                <fieldset>
-                                  <small id="emailHelp" class="form-text text-muted">For example, 31 3 1980</small>
-                                  <div class="row">
-                                    <div class="col">
-                                      <label for="date">Day</label>
-                                      <input type="number" id="d" name="date" min="1" max="31" />
-                                    </div>
-                                    <div class="col">
-                                      <label for="month">Month</label>
-                                      <input type="number" id="m" name="month" min="1" max="12" />
-                                    </div>
-                                    <div class="col">
-                                      <label for="year">Year</label>
-                                      <input type="number" id="y" name="year" min="1900" max="9999" />
-                                    </div>
-                                </fieldset>
-                              </form>
-
-                            </div>
+                      </div>
 
 
+                      <div>
+
+                        <h4>End date</h4>
+                        <form>
+                          <fieldset>
+                            <small id="emailHelp" class="form-text text-muted">For example, 30 03 2016</small>
+                            <div class="row">
+                              <div class="col">
+                                <label for="date">Day</label>
+                                <input type="number" id="d" name="date" min="1" max="31" />
+                              </div>
+                              <div class="col">
+                                <label for="month">Month</label>
+                                <input type="number" id="m" name="month" min="1" max="12" />
+                              </div>
+                              <div class="col">
+                                <label for="year">Year</label>
+                                <input type="number" id="y" name="year" min="1900" max="9999" />
+                              </div>
+                          </fieldset>
+                        </form>
+
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
 
 
@@ -196,24 +207,29 @@ Dashboard
 
 
 
-            {% endblock %}
-
-            {%block pageScripts%}
-
-            <html>
 
 
-            <head>
-              <script>
-                document.getElementById("gethistoric").onclick = function() {
-                  if (document.getElementById("hidethis").style.display == 'none') {
-                    document.getElementById("hidethis").style.display =
-                      'block'; // set to table-row instead of an empty string
-                  } else {
-                    document.getElementById("hidethis").style.display = 'none';
-                  }
-                }
-              </script>
-            </head>
 
-            {% endblock %}
+
+
+                      {% endblock %}
+
+                      {%block pageScripts%}
+
+                      <html>
+
+
+                      <head>
+                        <script>
+                          document.getElementById("gethistoric").onclick = function() {
+                            if (document.getElementById("hidethis").style.display == 'none') {
+                              document.getElementById("hidethis").style.display =
+                                'block'; // set to table-row instead of an empty string
+                            } else {
+                              document.getElementById("hidethis").style.display = 'none';
+                            }
+                          }
+                        </script>
+                      </head>
+
+                      {% endblock %}
