--- a/app/views/ovm-v2/current-status.html
+++ b/app/views/ovm-v2/current-status.html
@@ -43,6 +43,7 @@ Dashboard
         <th scope="col">BRP number</th>
         <th scope="col">Visa type</th>
         <th scope="col">Immigration status</th>
+        <th scope="col">Healthcare status</th>
 
       </tr>
 
@@ -56,6 +57,7 @@ Dashboard
           <td role="cell">Not provided</td>
           <td role="cell">EU settlement scheme</td>
           <td role="cell">Indefinite leave to remain</td>
+          <td>Access to free NHS services</td>
 
         </tr>
 
