--- a/docs/views/index.html
+++ b/docs/views/index.html
@@ -37,6 +37,8 @@ SCRa prototype kit
 
 <a href="ovm-v2/partial-results">Partial results</a><br />
 
+<a href="ovm-v2/current-status-loader">Search with loading wheel</a><br />
+
 
 
 
