--- a/app/docs/views/index.html
+++ b/app/docs/views/index.html
@@ -27,7 +27,7 @@ SCRa prototype kit
   Prototype 2 is the newest version of the OVM SCR prototype.
 </p>
 
-<a href="ovm-v2/current-status">Prototype 2</a>
+<a href="ovm-v2/current-status-loader">Prototype 2</a>
 
 <a href="ovm-v1/current-status">Prototype 1</a><br />
 
