more examples added for jim

--- a/app/views/ovm-v2/current-status-red.html
+++ b/app/views/ovm-v2/current-status-red.html
@@ -10,7 +10,7 @@ Dashboard
 
 <div class="red-banner">
   <p style="display:inline;margin-left:30px" id="exclamation"><span>!</p>
-          <p style="display:inline;">Likely chargeable for NHS services.</span></p>
+          <p style="display:inline;">Red: Chargeable for NHS services.</span></p>
 </div>
 
 <ul class="nav nav-tabs" id="myTab" role="tablist">
