--- a/app/views/ovm-v2/current-status.html
+++ b/app/views/ovm-v2/current-status.html
@@ -10,7 +10,7 @@ Dashboard
 
 <div class="green-banner">
   <img style="padding-left:30px; display:inline-block;" src="/images/tick-icon.svg" alt="green tick"><span style="color:white;padding-left:20px;">
-    Access to free NHS services.</p></span>
+    Green: Access to free NHS services subject to Ordinarily Resident status - check evidence</p></span>
 </div>
 
 <ul class="nav nav-tabs" id="myTab" role="tablist">
