--- a/app/views/ovm-v2/example-3.html
+++ b/app/views/ovm-v2/example-3.html
@@ -64,7 +64,7 @@ Dashboard
             <td width="20%" role="cell">AB-S1g6-0000-5db8-c3a8-3</td>
             <td width="14%" role="cell">N/A</td>
             <td width="14%" role="cell">EU settlement scheme</td>
-            <td width="14%" role="cell">leave to remain</td>
+            <td width="14%" role="cell">Leave to remain</td>
             <td width="14%" role="cell">Access to free NHS services</td>
 
           </tr>
@@ -151,10 +151,10 @@ Dashboard
 
 
 
-                        <form style="padding-top:20px;" action="/ovm-v2/historic-status" id="submit-button">
+                        <form style="padding-top:20px;" action="/ovm-v2/historic-status-3" id="submit-button">
                           <div class="row">
                           <div class="col-4">
-                          <input  type="submit" id="button"  style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" href="/ovm-v2/historic-status" value="submit" ></input>
+                          <input  type="submit" id="button"  style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" href="/ovm-v2/historic-status-3" value="submit" ></input>
                         </div>
                         <div class="col-8">
                           <span style="display:inline;">
