--- a/docs/views/index.html
+++ b/docs/views/index.html
@@ -24,12 +24,27 @@ SCRa prototype kit
 {% block content %}
 
 <p>
-  Prototype 2 is the newest version of the OVM SCR prototype.
+
 </p>
 
-<a href="ovm-v2/current-status-loader">Prototype 2</a><br />
 
-<a href="ovm-v1/current-status">Prototype 1</a><br />
+
+
+
+<a href="ovm-v2/example-1">Patient has pre-settled status, no history</a><br />
+
+<a href="ovm-v2/example-2">Patient has settled status, previously had pre-settled status</a><br />
+
+<a href="ovm-v2/example-3">Patient was IHS patient and has since applied successfully to EU settlement scheme</a><br />
+
+<a href="ovm-v2/example-4">Patient had status but it has since expired, with no new status</a><br />
+
+<a href="ovm-v2/example-5">Patient has valid IHS status</a><br />
+
+<a href="ovm-v2/example-6">Patient had valid IHS status which has now expired.</a><br />
+
+<a href="ovm-v2/example-7">IHS patient has become naturalised</a><br />
+
 
 <a href="ovm-v2/current-status-red">Red status banner</a><br />
 
@@ -38,6 +53,7 @@ SCRa prototype kit
 <a href="ovm-v2/partial-results">Partial results</a><br />
 
 <a href="ovm-v2/current-status-loader">Search with loading wheel</a><br />
+
 
 
 
