--- a/app/assets/sass/components/_chargebanner.scss
+++ b/app/assets/sass/components/_chargebanner.scss
@@ -13,6 +13,21 @@
   }
 }
 
+
+.amber-banner
+{
+  background-color: #ED7D31;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+
+  p{
+    color: white;
+    margin: 0px;
+    padding-left:50px;
+  }
+}
+
 .red-banner
 {
   background-color: #d5281b
