--- a/app/views/ovm-v2/example-1.html
+++ b/app/views/ovm-v2/example-1.html
@@ -151,10 +151,10 @@ Dashboard
 
 
 
-                        <form style="padding-top:20px;" action="/ovm-v2/historic-status" id="submit-button">
+                        <form style="padding-top:20px;" action="/ovm-v2/historic-status-1" id="submit-button">
                           <div class="row">
                           <div class="col-4">
-                          <input  type="submit" id="button"  style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" href="/ovm-v2/historic-status" value="submit" ></input>
+                          <input  type="submit" id="button"  style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" href="/ovm-v2/historic-status-1" value="submit" ></input>
                         </div>
                         <div class="col-8">
                           <span style="display:inline;">
