--- a/app/views/ovm-v2/example-6.html
+++ b/app/views/ovm-v2/example-6.html
@@ -8,9 +8,9 @@ Dashboard
 {% block content %}
 
 
-<div class="green-banner">
-  <img style="padding-left:30px; display:inline-block;" src="/images/tick-icon.svg" alt="green tick"><span style="color:white;padding-left:20px;">
-    Green: Access to free NHS services subject to Ordinarily Resident status - check evidence</p></span>
+<div class="red-banner">
+  <p style="display:inline;margin-left:30px" id="exclamation"><span>!</p>
+          <p style="display:inline;">Red: Chargeable for NHS services.</span></p>
 </div>
 
 <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -59,13 +59,13 @@ Dashboard
 
         <tbody role="rowgroup">
           <tr role="row" style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-            <td width="14%" role="cell" style="padding-left:20px">01-Aug-2020</td>
-            <td width="14%" role="cell">31-Jul-2025</td>
-            <td width="20%" role="cell">AB-S1g6-0000-5db8-c3a8-3</td>
+            <td width="14%" role="cell" style="padding-left:20px">22-Aug-2020</td>
+            <td width="14%" role="cell">No expiry</td>
+            <td width="20%" role="cell">ABC12/345678/A</td>
+            <td width="14%" role="cell">AB1234567</td>
+            <td width="14%" role="cell">Red: likely chargeable for NHS services</td>
             <td width="14%" role="cell">N/A</td>
-            <td width="14%" role="cell">EU settlement scheme</td>
-            <td width="14%" role="cell">leave to remain</td>
-            <td width="14%" role="cell">Access to free NHS services</td>
+            <td width="14%" role="cell">N/A</td>
 
           </tr>
 
@@ -151,10 +151,10 @@ Dashboard
 
 
 
-                        <form style="padding-top:20px;" action="/ovm-v2/historic-status" id="submit-button">
+                        <form style="padding-top:20px;" action="/ovm-v2/historic-status-6" id="submit-button">
                           <div class="row">
                           <div class="col-4">
-                          <input  type="submit" id="button"  style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" href="/ovm-v2/historic-status" value="submit" ></input>
+                          <input  type="submit" id="button"  style="border-radius:4px;border-color:#C5C5C5;margin-top:20px;padding:10px;background-image: linear-gradient(white, #C5C5C5);" href="/ovm-v2/historic-status-6" value="submit" ></input>
                         </div>
                         <div class="col-8">
                           <span style="display:inline;">
