--- a/app/views/ovm-v2/historic-status-3.html
+++ b/app/views/ovm-v2/historic-status-3.html
@@ -56,10 +56,10 @@ Dashboard
 
       <tbody>
         <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-          <td width="14%" style="padding-left:20px">01-Jun-2020</td>
+          <td width="14%" style="padding-left:20px">01-Aug-2020</td>
           <td width="14%">No expiry</td>
-          <td width="20%">AM-ypGP-085c-cd7d-9e66-2</td>
-          <td width="14%">Not provided</td>
+          <td width="20%">AB-S1g6-0000-5db8-c3a8-3</td>
+          <td width="14%">N/A</td>
           <td width="14%">EU settlement scheme</td>
           <td width="14%">Indefinite leave to remain</td>
           <td width="14%">Access to free NHS services</td>
@@ -86,11 +86,11 @@ Dashboard
           </thead>
           <tbody>
             <tr style="height:80px;">
-              <td style="padding-left:20px;" colspan="7"><strong>Showing search results for 01-Jan-2019 to 31-Dec-2019:</strong></td>
+              <td style="padding-left:20px;" colspan="7"><strong>Showing search results for 22-Sep-2018 to 30-Dec-2020:</strong></td>
             </tr>
             <tr>
-              <th width="14%" scope="col" style="padding-left:20px;">Start date</th>
-              <th width="14%" scope="col">End date</th>
+              <th width="14%" scope="col" style="padding-left:20px;">Immigration status from</th>
+              <th width="14%" scope="col">Immigration status to</th>
               <th width="20%" scope="col">HO reference</th>
               <th width="14%" scope="col">BRP number</th>
               <th width="14%" scope="col">Visa type</th>
@@ -101,13 +101,23 @@ Dashboard
 
             <tbody>
               <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
-                <td style="padding-left:20px; ">19-Jan-2019</td>
-                <td width="14%">31-May-2020</td>
-                <td width="20%">AM-ypGP-085c-cd7d-9e66-2</td>
-                <td width="14%">Not provided</td>
-                <td width="14%">EU settlement scheme</td>
-                <td width="14%">Leave to remain</td>
-                <td width="14%">Access to free NHS services</td>
+                <td style="padding-left:20px; ">22-Sep-2019</td>
+                <td width="14%">No expiry</td>
+                <td width="20%">ABC12/345678/A</td>
+                <td width="14%">AB1234567</td>
+                <td width="14%">Red: likely chargeable for NHS services</td>
+                <td width="14%">N/A</td>
+                <td width="14%">N/A</td>
+              </tr>
+
+              <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
+                <td style="padding-left:20px; ">22-Sep-2018</td>
+                <td width="14%">21-Sep-2019</td>
+                <td width="20%">ABC12/345678/A</td>
+                <td width="14%">AB1234567</td>
+                <td width="14%">Green: paid or exempt from health surcharge</td>
+                <td width="14%">N/A</td>
+                <td width="14%">N/A</td>
               </tr>
 
         <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;margin-top:0px;">
