--- a/app/views/ovm-v2/historic-status-7.html
+++ b/app/views/ovm-v2/historic-status-7.html
@@ -62,8 +62,8 @@ Dashboard
           <td width="20%" role="cell">ABC12/345678/A</td>
           <td width="14%" role="cell">AB1234567</td>
           <td width="14%" role="cell">Patient is now a British citizen</td>
-          <td width="14%" role="cell">N/A</td>
-          <td width="14%" role="cell">N/A</td>
+          <td width="14%" role="cell">Not provided</td>
+          <td width="14%" role="cell">Not provided</td>
 
         </tr>
 
@@ -80,7 +80,7 @@ Dashboard
 
 
             <tr>
-              <th scope="col" style="color:black; padding-left:20px;">Historical status</th>
+              <th scope="col" style="color:black; padding-left:20px;">Historic status</th>
               <th scope="col"></th>
               <th scope="col"></th>
               <th scope="col"></th>
@@ -112,8 +112,8 @@ Dashboard
                 <td width="20%">ABC12/345678/A</td>
                 <td width="14%">AB1234567</td>
                 <td width="14%">Green: paid or exempt from health surcharge</td>
-                <td width="14%">N/A</td>
-                <td width="14%">N/A</td>
+                <td width="14%">Not provided</td>
+                <td width="14%">Not provided</td>
               </tr>
 
 
