--- a/app/views/ovm-v2/example-3.html
+++ b/app/views/ovm-v2/example-3.html
@@ -62,8 +62,8 @@ Dashboard
             <td width="14%" role="cell" style="padding-left:20px">01-Aug-2020</td>
             <td width="14%" role="cell">31-Jul-2025</td>
             <td width="20%" role="cell">AB-S1g6-0000-5db8-c3a8-3</td>
-            <td width="14%" role="cell">N/A</td>
-            <td width="14%" role="cell">EU settlement scheme</td>
+            <td width="14%" role="cell">Not provided</td>
+            <td width="14%" role="cell">EU Settlement Scheme</td>
             <td width="14%" role="cell">Leave to remain</td>
             <td width="14%" role="cell">Access to free NHS services</td>
 
@@ -84,7 +84,7 @@ Dashboard
       <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
         <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
           <tr>
-            <th scope="col" style="color:black; padding-left:20px;" colspan="7">Historical status</th>
+            <th scope="col" style="color:black; padding-left:20px;" colspan="7">Historic status</th>
 
           </tr>
         </thead>
@@ -93,7 +93,7 @@ Dashboard
             <td colspan="0">
               <div class="action-link" style="padding-top:30px;">
                 <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
-                      Get historical status
+                      Get historic status
                     </a></span>
               </div>
           </tr>
