--- a/app/views/ovm-v2/example-4.html
+++ b/app/views/ovm-v2/example-4.html
@@ -82,7 +82,7 @@ Dashboard
       <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
         <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
           <tr>
-            <th scope="col" style="color:black; padding-left:20px;" colspan="7">Historical status</th>
+            <th scope="col" style="color:black; padding-left:20px;" colspan="7">Historic status</th>
 
           </tr>
         </thead>
@@ -91,7 +91,7 @@ Dashboard
             <td colspan="0">
               <div class="action-link" style="padding-top:30px;">
                 <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
-                      Get historical status
+                      Get historic status
                     </a></span>
               </div>
           </tr>
