--- a/app/views/ovm-v2/example-6.html
+++ b/app/views/ovm-v2/example-6.html
@@ -64,8 +64,8 @@ Dashboard
             <td width="20%" role="cell">ABC12/345678/A</td>
             <td width="14%" role="cell">AB1234567</td>
             <td width="14%" role="cell">Red: likely chargeable for NHS services</td>
-            <td width="14%" role="cell">N/A</td>
-            <td width="14%" role="cell">N/A</td>
+            <td width="14%" role="cell">Not provided</td>
+            <td width="14%" role="cell">Not provided</td>
 
           </tr>
 
@@ -84,7 +84,7 @@ Dashboard
       <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
         <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
           <tr>
-            <th scope="col" style="color:black; padding-left:20px;" colspan="7">Historical status</th>
+            <th scope="col" style="color:black; padding-left:20px;" colspan="7">Historic status</th>
 
           </tr>
         </thead>
@@ -93,7 +93,7 @@ Dashboard
             <td colspan="0">
               <div class="action-link" style="padding-top:30px;">
                 <img style="padding-left:20px;" src="/images/arrow-right-circle.svg"><span id="gethistoric" onClick="toggle();"><span><a href="#" style="padding-left:30px; font-size:20px;">
-                      Get historical status
+                      Get historic status
                     </a></span>
               </div>
           </tr>
