--- a/app/views/ovm-v2/historic-status-3.html
+++ b/app/views/ovm-v2/historic-status-3.html
@@ -59,8 +59,8 @@ Dashboard
           <td width="14%" style="padding-left:20px">01-Aug-2020</td>
           <td width="14%">No expiry</td>
           <td width="20%">AB-S1g6-0000-5db8-c3a8-3</td>
-          <td width="14%">N/A</td>
-          <td width="14%">EU settlement scheme</td>
+          <td width="14%">Not provided</td>
+          <td width="14%">EU Settlement Scheme</td>
           <td width="14%">Indefinite leave to remain</td>
           <td width="14%">Access to free NHS services</td>
         </tr>
@@ -75,7 +75,7 @@ Dashboard
         <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
           <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
             <tr>
-              <th scope="col" style="color:black; padding-left:20px;">Historical status</th>
+              <th scope="col" style="color:black; padding-left:20px;">Historic status</th>
               <th scope="col"></th>
               <th scope="col"></th>
               <th scope="col"></th>
@@ -106,8 +106,8 @@ Dashboard
                 <td width="20%">ABC12/345678/A</td>
                 <td width="14%">AB1234567</td>
                 <td width="14%">Red: likely chargeable for NHS services</td>
-                <td width="14%">N/A</td>
-                <td width="14%">N/A</td>
+                <td width="14%">Not provided</td>
+                <td width="14%">Not provided</td>
               </tr>
 
               <tr style="border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
@@ -116,8 +116,8 @@ Dashboard
                 <td width="20%">ABC12/345678/A</td>
                 <td width="14%">AB1234567</td>
                 <td width="14%">Green: paid or exempt from health surcharge</td>
-                <td width="14%">N/A</td>
-                <td width="14%">N/A</td>
+                <td width="14%">Not provided</td>
+                <td width="14%">Not provided</td>
               </tr>
 
         <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;margin-top:0px;">
