--- a/app/views/ovm-v2/historic-status-4.html
+++ b/app/views/ovm-v2/historic-status-4.html
@@ -74,7 +74,7 @@ Dashboard
         <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;">
           <thead style="background-color:#DAE7F4;border-bottom:solid;border-width:thin;border-color: #C5C5C5;">
             <tr>
-              <th scope="col" style="color:black; padding-left:20px;">Historical status</th>
+              <th scope="col" style="color:black; padding-left:20px;">Historic status</th>
               <th scope="col"></th>
               <th scope="col"></th>
               <th scope="col"></th>
@@ -103,13 +103,13 @@ Dashboard
                 <td style="padding-left:20px; ">01-Dec-2018</td>
                 <td width="14%">31-Jul-2020</td>
                 <td width="20%">AB-S1g6-0000-5db8-c3a8-3</td>
-                <td width="14%">N/A</td>
+                <td width="14%">Not provided</td>
                 <td width="14%">EU Settlement Scheme</td>
-                <td width="14%">LEave to remain</td>
+                <td width="14%">Leave to remain</td>
                 <td width="14%">Access to free NHS services</td>
               </tr>
 
-              
+
 
         <table class="ovm-table" style="box-shadow: 0 4px 0 0 #d8dde0;margin-top:0px;">
 
